# qwen-profiler

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  QWEN.md  README.md  debug_config.py  demo_conversation_integration.py  nonexistent_config.yaml  pyproject.toml  requirements.txt  test_knowledge_graph.py  test_semantic_generality.py  validate_workflow.py
.docs/: project-evolution-1.md
.docs/adjustments/: README.md
.docs/input/: collaboration.yaml  engineer.yaml  infrastructure.yaml  test-1-QWEN.md  test-2-QWEN.md  test-3-QWEN.md  test-4-QWEN.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml  release-prep.yml
configs/: development.yaml  production.yaml  staging.yaml
docs/: project-mission.md
docs/api-reference/: index.md
docs/architecture/: behavioral-pillar.md  semantic-pillar.md  synergistic-integration.md  technical-pillar.md
docs/user-guides/: getting-started.md
profiles/: developer.yaml
research/domain-knowledge/autogen/: knowledge_graph.json
research/domain-knowledge/crewai/: knowledge_graph.json
research/domain-knowledge/langgraph/: knowledge_graph.json
research/domain-knowledge/langroid/: knowledge_graph.json
research/domain-knowledge/semantic-kernel/: knowledge_graph.json
research/internal-research/methodology/: README.md
research/internal-research/prototypes/: README.md
research/internal-research/validation/: README.md
src/: __init__.py  conversational_profiler.py  main.py
src/behavioral_pillar/: __init__.py
src/behavioral_pillar/behavioral_architect/: __init__.py  manager.py
src/behavioral_pillar/cognitive_validator/: __init__.py  manager.py
src/behavioral_pillar/response_coordinator/: __init__.py  manager.py
src/core/: __init__.py  config.py
src/core/activation_system/: __init__.py  manager.py
src/core/memory/: __init__.py  manager.py
src/core/ml_prediction/: __init__.py  predictor.py
src/core/validation_gates/: __init__.py  manager.py
src/integration_layer/: __init__.py  manager.py
src/semantic_pillar/: __init__.py
src/semantic_pillar/domain_linguist/: __init__.py  manager.py
src/technical_pillar/: __init__.py
src/technical_pillar/infrastructure_architect/: __init__.py  manager.py
src/technical_pillar/sre_specialist/: __init__.py  (+1 more)
tests/integration/: test_cross_pillar_integration.py
tests/unit/: test_config_manager.py  test_memory_manager.py
tools/knowledge-graph-tools/: autogen_knowledge_graph.py  populate_knowledge_graph.py
(+21 files in other folders)
